---------------------------------------------------------------------------------------------------
Version: 1.8.0
Date: ???

  Features:
    - Reworked custom attack group spawning position selection workflow.
    - Reworked custom attack group attack target selection workflow.

  Changes:
    - Changed Build style default setting to "Build a town".

  Bugfix:
    - Fix config cache for enemyracemanager-mapping-method
    - Fix negative and positive race using opposite coordinates.

---------------------------------------------------------------------------------------------------
Version: 1.7.3
Date: 2021-09-14

  Bugfixes:
    - Fix an incorrect assignment of a cache value

---------------------------------------------------------------------------------------------------
Version: 1.7.2
Date: 2021-09-14

  Bugfixes:
    - Fix a game start up crash when Bio Industry enables.

---------------------------------------------------------------------------------------------------
Version: 1.7.1
Date: 2021-09-03

  Bugfixes:
    - Turn off debug mode.
        
---------------------------------------------------------------------------------------------------
Version: 1.7.0
Date: 2021-09-03

  Features:
    - ---- Dropship Squad ----
    - Can be enable in setting and set its chance to spawn. Default to ON.
    - Flying units squad must be enabled as prerequisite.
    - Each unit cost 150 attack meter points.  Default 3000 points spawns 20 units.
    - ---- END Dropship Squad ----
    - ---- Squad Subtype: Precision Strike ----
    - The squads with this subtype go straight to inner base targets, bypass your defense.
    - Targets the area within 32 radius of any rocket-silo, artillery or mining-drill.
    - Dropship squad is always a precision strike squad.
    - Flying units squad can be configure to have this feature.  Default to OFF.
    - Strike location will be warn on the map. This option can be turn off.  Default to ON.